--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Tests and Check Coverage
+name: Run Tests, Lint, and Check Coverage
 
 on:
   push:
@@ -14,13 +14,24 @@ jobs:
       - name: 🛎 Checkout repo
         uses: actions/checkout@v4
 
-      - name: 🧰 Setup Node
+      - name: 🧰 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'npm'
 
       - name: 📦 Install dependencies
         run: npm ci
 
+      - name: 🧹 Lint code
+        run: npm run lint
+
       - name: 🧪 Run tests with coverage
         run: npm run test:coverage
+
+      - name: 📂 Upload coverage report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage/
