--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,16 @@ jobs:
         run: npm ci
 
       - name: 🧹 Lint code
-        run: npm run lint
+        run: npm run lint > lint-report.txt || true
+
+      - name: 📤 Upload lint report
+        uses: actions/upload-artifact@v4
+        with:
+          name: lint-report
+          path: lint-report.txt
 
       - name: 🧪 Run tests with coverage
-        run: npm run test:coverage
+        run: npm run test:coverage -- --coverage.enabled true
 
       - name: 📂 Upload coverage report
         if: always()
