--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,20 +42,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: 🧰 Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: 📦 Install dependencies
-        run: npm ci
+      - run: npm ci
 
-      - name: 🧽 Run ESLint
-        run: npm run lint > lint-report.txt || true
+      - run: npm run lint > lint-report.txt || true
 
-      - name: 📤 Upload Lint Report
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: lint-report
           path: lint-report.txt
@@ -66,17 +61,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: 🧰 Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: 📦 Install dependencies
-        run: npm ci
+      - run: npm ci
 
-      - name: 🧪 Run tests with coverage
-        run: npm run test:coverage -- --coverage.enabled true --coverage.reporter=lcov
+      - run: npm run test:coverage -- --coverage.enabled true --coverage.reporter=lcov
 
       - name: 📂 Upload coverage report
         if: always()
@@ -101,17 +92,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: 🧰 Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: 📦 Install dependencies
-        run: npm ci
-
-      - name: 🏗️ Build Project
-        run: npm run build
+      - run: npm ci
+      - run: npm run build
 
   security:
     name: 🔐 Secret Scan
@@ -127,5 +113,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          # Uncomment the next line if you're using a custom config file
-          # args: "--config=.github/.gitleaks.toml"
+          args: "--config=.github/.gitleaks.toml" # or omit if using default config
